# Octopus

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  lefthook.yml  pyproject.toml
docs/: 2026-05-18-bg-pipeline-hardening.md  ARCHITECTURE.md  BUG_NEED_FIX.md  README.md  SESSION_TASKS.md  STEAL_PLAN.md  architecture.md  cli-protocol-notes.md  cli-resume-synthetic-pair.md  cli-system-prompt-notes.md  codex-protocol-notes.md  connectors-plan.md  connectors-setup.md  future-features.md  long-running-plan.md  top3-implementation-plan.md
scripts/: dump-openapi.py  setup-hooks.sh  setup-services.sh
server/: agent_manager.py  agent_memory.py  attachments.py  auth.py  bg_tasks.py  cli.py  codex_login.py  config.py  connector_manager.py  crypto.py  database.py  delegations.py  file_viewer.py  fork_helpers.py  jsonl_parser.py  jsonl_writer.py  large_prompts.py  main.py  models.py  oauth_errors.py  oauth_login.py  oauth_providers.py  schedule_ai.py  scheduler.py  session_manager.py  showme_ai.py  tunnel.py
tests/: cli_gate.py  conftest.py  test_agent_memory.py  test_agent_memory_real.py  test_agents_api.py  test_api.py  test_ask_agent_mcp.py  test_attachments.py  test_backend_claude_code.py  test_backend_claude_code_real.py  test_backend_codex.py  test_backend_codex_real.py  test_backend_connectors.py  test_backends_subprocess.py  test_bg_tasks.py  test_bridge_base.py  test_bridge_database.py  test_bridge_manager.py  test_bridge_telegram.py  test_cli.py  test_codex_login.py  test_codex_login_real.py  test_config.py  test_connector_custom.py  test_database.py  (+45 more)
(+159 files in other folders)
